# demo-rust-backend

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/routes/: date.rs
src/services/: date.rs
src/tests/: date.rs  mod.rs
