[package]
name = "demo-rust-rest-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
rocket = { version = "0.5.0-rc2", features = ["json"] }
chrono = "0.4"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.108"